--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -25,7 +25,7 @@
 
 /* header start */
 header{
-    background-color: black;
+    background-color: purple;
     padding: 20px 0;
 }
 
@@ -41,6 +41,14 @@ header{
     background-color: #fff;
 }
 
+
+.header__first__figure{
+     background-color: blue;
+}
+
+.header__secong__figure{
+    background-color: blue;
+}
 .header__secong__figure {
     width: 120px;
     height: 60px;
@@ -93,9 +101,10 @@ header{
 /* catalog end */
 
 .image{
-    width: 200px;
-    height: 200px;
-    margin: 10px 0px 0px 60px;
+    width: 150px;
+    height: 150px;
+    margin-left: 80px;
+    margin-top: 30px;
 }
 
 .title{
